...
"article-tabs-open-new-tab" = "Open in new tab";
"article-talk-page" = "Article talk page";
"article-toolbar-reading-themes-controls-toolbar-item" = "Reading Themes Controls";
"article-view-controller-editing-temp-account-created-subtitle" = "Temporary account $1 was created after your edit was published. It will expire in 90 days.";
"article-view-controller-editing-temp-account-created-title" = "Temporary account created";
"back-button-accessibility-label" = "Back";
"back-button-popover-title" = "Tap to go back";
"button-go-back" = "Go back";
"button-next" = "Next";
"button-ok" = "OK";
"button-publish" = "Publish";
"button-publish-anyway" = "Publish anyway";
"button-report-a-bug" = "Report a bug";
"button-save-for-later" = "Save for later";
"button-saved-for-later" = "Saved for later";
"button-saved-remove" = "Remove from saved";
"button-skip" = "Skip";
"cancel" = "Cancel";
"cc-zero" = "Creative Commons CC0";
"chinese-variants-alert-body" = "The Wikipedia app now supports the following Chinese variants as primary or secondary languages within the app, making it easier to read, search and edit in your preferred variants:\n\n简体 Chinese, Simplified (zh-hans)\n香港繁體 Hong Kong Traditional (zh-hk)\n澳門繁體 Macau Traditional (zh-mo)\n大马简体 Malaysia Simplified (zh-my)\n新加坡简体 Singapore Simplified (zh-sg)\n臺灣正體 Taiwa
"chinese-variants-alert-title" = "Updates to Chinese variant support";
"clear-title-accessibility-label" = "Clear";
"clearing-cache-complete" = "Clearing cache complete.";
...
"find-textfield-accessibility" = "Find";
"forgot-password-button-title" = "Reset";
"forgot-password-email-sent" = "An email with password reset instructions was sent";
"forgot-password-instructions" = "Fill in one of the fields below to receive password reset instructions via email";
"forgot-password-title" = "Reset password";
"forgot-password-username-or-email-title" = "Or";
"games-announcement-maybe-later-button" = "Maybe later";
"games-announcement-message" = "A new trivia game has arrived, based on Wikipedia content. Guess which event came first in history.";
"games-announcement-play-button" = "Play";
"games-announcement-title" = "Play \"Which came first?\"";
"games-email-report-body-encountered" = "I have encountered a problem with the Wikipedia games feature:";
"games-email-report-subject" = "Issue Report - Wikipedia games";
"games-wcf-button-play-title" = "Play today's game";
...
"home-themes-action-title" = "Manage preferences";
"home-themes-prompt" = "Adjust your Reading preferences including text size and theme from the article tool bar or in your user settings for a more comfortable reading experience.";
"home-title" = "Explore";
"home-title-accessibility-label" = "Wikipedia, scroll to top of Explore";
"icon-shortcut-nearby-title" = "Nearby articles";
"icon-shortcut-random-title" = "Random article";
"icon-shortcut-search-title" = "Search Wikipedia";
"image-gallery-unknown-owner" = "Author unknown.";
"image-rec-add-image-title" = "Add this image?";
"image-rec-empty-subtitle" = "Try coming back later.";
"image-rec-empty-title" = "You have no more suggested images available at this time.";
"image-rec-error-subtitle" = "Something went wrong.";
"image-rec-error-title" = "Unable to load page";
...
