...
            rateResult: String = "Rate this result",
            rated: String = "Rated",
            rateThumbsUpAccessibility: String = "Rate thumbs up",
            rateThumbsDownAccessibility: String = "Rate thumbs down",
            semanticResultsEmpty: String = "Enhanced search is temporarily unavailable.",
            errorMessage: String = "Something went wrong. Please try again later.",
            noResultsHeader: String = "No results",
            noResultsDescription: String = "This topic isn't returning article excerpts at this moment. Here are some things you can try:",
            noResultsRephraseSuggestion: String = "Rephrase your search",
            noResultsRelatedTopicSuggestion: String = "Try a related topic"
        ) {
            self.betaTag = betaTag
            self.headerDescription = headerDescription
...
